# Coursera-Crypto-1-Assignments

./: .gitignore  README.md
Week 1/: decrypt.py
Week 2/: blocks.py
Week 2/Block Ciphers cpp/: CMakeLists.txt  block_cipher.cc  block_cipher.h  block_cipher_test.cc  blocks.cc  blocks.h  blocks_test.cc  main.cc  test.sh  utils.cc  utils.h  utils_test.cc
Week 3/: verify_hash.py  video_hash.py
Week 3/Video Hasher cpp/: CMakeLists.txt  main.cc  video_hasher.cc  video_hasher.h  video_hasher_test.cc
Week 4/: padding_oracle.py
Week 4/Padding Oracle cpp/: CMakeLists.txt  conanfile.txt  main.cc
Week 5/: dlog.py
Week 5/dlog cpp/: CMakeLists.txt  dlog.cc  dlog.h  dlog_test.cc  main.cc
Week 6/: factor_rsa.py
Week 6/Factor RSA cpp/: CMakeLists.txt  conanfile.txt  factor_rsa.cc  factor_rsa.h  factor_rsa_test.cc
